# Zephyr-stm32-L298n

./: CMakeLists.txt  README.md  prj.conf
applications/: main2.c  main3.c
boards/: stm32f4_disco_l298n.overlay  stm32f4_servo.overlay
